fixed spacing for profile image

--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -3,14 +3,14 @@
     display: flex;
     justify-content: space-between;
     padding: 0px 0px;
-    background-color: white; 
+    background-color: red; 
     color: black;
     /* box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1); */
-    height: 60px;
+    /* height: 60px; */
     max-width: 800px;
     margin: auto;
     align-items: center;
-    padding: 20px ;
+    padding: 10px ;
   }
   
   .left-section {
@@ -19,7 +19,7 @@
     flex-direction: column;
     flex: 1;
     height: auto;
-    padding: 10px;
+    /* padding: 10px; */
   }
   
   .right-section {
